@@ -6,6 +6,10 @@ Type/class unification and new-style classes
 
 Core and builtins
 
+- Changed new-style class instantiation so that when C's __new__
+  method returns something that's not a C instance, its __init__ is
+  not called.  [SF bug #537450]
+
 - Fixed super() to work correctly with class methods.  [SF bug #535444]
 
 - A new built-in type, bool, has been added, as well as built-in
